--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "compile-hero.disable-compile-files-on-did-save-code": false,
     "cSpell.words": [
         "immididally"
-    ]
+    ],
+    "editor.inlineSuggest.showToolbar": "onHover"
 }
